content/en/docs/02/resources/ingress_example-web-python.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-web-python
spec:
  rules:
    - host: example-web-python-<namespace>.<domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-web-python
                port:
                  number: 5000
